# skimmer

./: .RUNBOOK.md.swp  .env  .gitignore  AnalizeData.ipynb  AnalizeData.py  Convert.py  InspectIngestedTables.ipynb  README.md  RUNBOOK.md  Youtube Scraper.ipynb  bronze_store.py  buildIDProfil.py  buildIDProfile-old.py  buildIDProfile.ipynb  buildIDProfile.py  buildProfileManager.py  output.csv  output2024-05-08-225040.csv  pyproject.toml  resolveYouTubeChannelIds.py  setup.py  test_teststuff.py  workflow.py  youtubeSkimmer.py
.ipynb_checkpoints/: AnalizeData-checkpoint.ipynb  InspectIngestedTables-checkpoint.ipynb  Youtube Scraper-checkpoint.ipynb  buildIDProfile-checkpoint.ipynb  youtubeSkimmer-checkpoint.py
deploy/systemd/: skimmer-workflow.service
docs/: youtube_api_collector_plan.md
scripts/: analyze_data.py
src/skimmer/: __init__.py  config.py
src/skimmer/collectors/: __init__.py  channel_ids.py  socialblade.py  vidiq.py  youtube.py  youtube_api.py
src/skimmer/domain/: normalization.py
src/skimmer/services/: profile_manager.py  workflow.py
src/skimmer/storage/: __init__.py  bronze.py
systemd/: skimmer-workflow.service
tests/: test_bronze_store.py  test_profile_manager.py  test_workflow.py
