[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skimmer"
version = "0.1.0"
description = "YouTube feed and channel metric collection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "scrapy",
    "selenium",
]

[project.optional-dependencies]
analysis = [
    "numpy",
    "pandas",
]

[project.scripts]
skimmer-youtube = "skimmer.collectors.youtube:main"
skimmer-vidiq = "skimmer.collectors.vidiq:main"
skimmer-socialblade = "skimmer.collectors.socialblade:main"
skimmer-resolve-channel-ids = "skimmer.collectors.channel_ids:main"
skimmer-profile-manager = "skimmer.services.profile_manager:main"
skimmer-workflow = "skimmer.services.workflow:main"

[tool.setuptools.packages.find]
where = ["src"]
